Propose adding all those eligible for IMOC into rotation

--- a/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
+++ b/infrastructure/incident-management/incident-manager-onboarding/index.html.md.erb
@@ -16,7 +16,7 @@ This page is meant to be the starting point for onboarding as an Incident Manage
 As a means to ensure a healthy [Incident Manager](/handbook/engineering/infrastructure/incident-management/#incident-manager-responsibilities) rotation with sufficient staffing and no significant burden on any single individual we staff this role with Team Members from across Engineering.
 
 The Incident Manager role will be staffed by all team members within this scope:
-- [Job Grade](/handbook/total-rewards/compensation/compensation-calculator/#job-grades) between, but not including, 7 to 10.
+- [Job Grades 8 and 9](/handbook/total-rewards/compensation/compensation-calculator/#job-grades)
 - Development and Infrastructure departments
 - All Staff Engineer, SRE, and Engineering Manager Job Families
 - All specialties within the above Job Families (for example: Staff Backend Engineer, Staff Frontend Engineer, Frontend Engineering Manager, etc..)
@@ -56,7 +56,11 @@ In some cases, Senior Engineers may also participate as Incident Managers. This 
 
 #### Is this a volunteer effort?
 
-No.  All team members in eligible roles are expected to participate in the Incident Manager rotation.  We are looking to maximize the number of participants since a larger pool lowers the burden on each individual.  We will consider exceptions on a case by case basis.  Please talk to your manager if you do not think you can participate or would need an alternative schedule.  Assignment and exemptions to participation will be coordinated by the VP of Infrastructure and the VP of Development or their designees, and the requests require approval from the participants' reporting managers. [This internal spreadsheet is being used to track exemptions from participating](https://docs.google.com/spreadsheets/d/1I_e3f4Xb3Z4RwEpmQGcIKA-59fjqJP9RS1sVGgS5VdM/edit#gid=0).
+No.  All team members in eligible roles are expected to participate in the Incident Manager rotation.  All team members who are eligible are to be scheduled into PagerDuty. Those who have upcoming shifts will need to prioritize completing their IMOC onboarding issues.
+If anyone does not feel ready to become an Incident Manager, [follow our process to swap shifts with someone else](#can-i-shift-my-incident-manager-on-call-days-around) and work with your manager or the Incident Management Coordinator to resolve any challenges you are facing.
+
+Note that we will consider exceptions on a case by case basis.  Please talk to your manager if you do not think you can participate or would need an alternative schedule.  Assignment and exemptions to participation will be coordinated by the VP of Infrastructure and the VP of Development 
+or their designees, and the requests require approval from the participants' reporting managers. [This internal spreadsheet is being used to track exemptions from participating](https://docs.google.com/spreadsheets/d/1I_e3f4Xb3Z4RwEpmQGcIKA-59fjqJP9RS1sVGgS5VdM/edit#gid=0).
 
 #### I am an engineer in Development. Am I exempt from the Dev On-call when I am on an Incident Manager rotation?
 
