--- a/development/enablement/index.html.md.erb
+++ b/development/enablement/index.html.md.erb
@@ -74,7 +74,7 @@ The following table shows who will provide cover if one or more of the Enablemen
 
 If an Engineer is unavailable the person providing `Issues/MRs` coverage will reassign open issues and merge requests to another engineer, preferably in the same [group](#all-team-members).
 
-Some people management functions may require escalation or delegation, such as BambooHR and Expensify.
+Some people management functions may require escalation or delegation, such as [Workday](/handbook/people-group/workday/workday-guide/) and [Navan Expense](/handbook/business-technology/enterprise-applications/guides/navan-expense-guide/).
 
 This can be used as the basis for a BCP [Communication Plan and Role Assignments](/handbook/business-technology/gitlab-business-continuity-plan/#communication-plan-and-role-assignments),
 as well as a general guide to Enablement Engineering continuity in the event of one or more team members being unavailable for any reason.
