--- a/development/sec/govern/compliance/index.html.md.erb
+++ b/development/sec/govern/compliance/index.html.md.erb
@@ -73,6 +73,13 @@ We plan in monthly cycles in accordance with our [Product Development Timeline](
 #### Breaking down or promoting issues
 <%= partial("handbook/engineering/development/sec/govern/compliance/promote_issues.erb") %>
 
+#### Demos
+During the `workflow::verification` process, we determine whether the Issue requires a demo. If unsure, work with PM to determine if a demo is required. Demos are great for showcasing progress and help users quickly understand how to use a features and its benefits. Our process for this is similar to [Single Engineer Groups Demo](https://about.gitlab.com/handbook/engineering/demos/#single-engineer-groups-demo):
+
+- Record a video on your computer or via Zoom livestream of the working software
+- Upload to the [GitLab Unfiltered Channel](https://www.youtube.com/channel/UCMtZ0sc1HHNtGGWZFDRTh5A) and add to the [Compliance Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0Kq7_yBKIYHi8qvCWeU0Q3yH)
+- Post the YouTube link to the appropriate Slack channel and in the Issue
+
 ### Release posts
 <%= partial("handbook/engineering/development/sec/govern/compliance/release_posts.erb") %>
 
