Create new section for ad hoc compliance work

--- a/development/sec/govern/compliance/index.html.md.erb
+++ b/development/sec/govern/compliance/index.html.md.erb
@@ -30,6 +30,19 @@ title: "Compliance Group"
 ### Code Review
 <%= partial("handbook/engineering/development/sec/govern/compliance/code_review.erb") %>
 
+### Working on ad hoc work and questions
+From time to time, there will be ad hoc work and questions that arise, such as Slack questions, questions in Issues, Error Budget investigations, etc. All Compliance group members are encouraged to watch these mediums and engage.
+
+As first responder, we will acknowledge the ad hoc work / question in the appropriate medium. This is to ensure that the questioner knows that we are on it.
+
+Similar to [Spikes](#spikes), as a rule of thumb, if the work will take longer than 1 hour to investigate and respond, then create an issue. This is to ensure that this work is accounted for, is transparent and has a DRI. This can be done through asking the questioner to create an issue, or taking ownership and creating the issue ourselves.
+
+We try to ensure that the ad hoc work Issue has as much info as possible, asking for more info where required. Before working on an Issue, we make sure to define a clear question or problem that needs to be delivered.
+
+Next, we take ownership of the Issue, assigning it to ourselves. We also add the :eyes: reaction to the Slack message/Issue comment to indicate that investigation has begun. We also ensure correct label hygiene (~type::, ~group::, ~priority::, ~workflow::). In the comments, ping the Compliance EM and PM to ensure transparency. Depending on priority, it may need to go through [cross-functional prioritization process](#milestone-planning) to get it planned, scheduled, and completed.
+
+Once the investigation is complete, we follow up in the original medium. We also add the :white_check_mark: reaction to the original Slack message/Issue comment to indicate that investigation is complete.
+
 ### Spikes
 <%= partial("handbook/engineering/development/sec/govern/compliance/spikes.erb") %>
 
