--- a/development/dev/index.html.md.erb
+++ b/development/dev/index.html.md.erb
@@ -29,8 +29,8 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 1. [Plan](/handbook/product/categories/#plan-stage)
   * [Plan:Project Management](/handbook/engineering/development/dev/plan-project-management/)
   * [Plan:Product Planning](/handbook/engineering/development/dev/plan/product-planning/)
-  * [Plan:Certify](/handbook/engineering/development/dev/plan/certify/)
   * [Plan:Optimize](/handbook/engineering/development/dev/plan/optimize)
+  * [Plan:Editor](/handbook/engineering/development/dev/plan/editor/)
 1. [Create](/handbook/product/categories/#create-stage)
   * [Create: Source Code BE](/handbook/engineering/development/dev/create/source-code-be/)
   * [Create: Source Code FE](/handbook/engineering/development/dev/create/code-review/frontend/)
@@ -68,11 +68,11 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 #### Plan:Product Planning
 <%= direct_team(manager_role: 'Backend Engineering Manager, Plan:Product Planning') %>
 
-#### Plan:Certify
-<%= direct_team(manager_role: 'Backend Engineering Manager, Plan:Certify') %>
-
 #### Plan:Optimize
 <%= direct_team(manager_role: 'Engineering Manager, Plan:Optimize') %>
+
+#### Plan:Editor
+<%= direct_team(manager_role: 'Senior Manager, Engineering, Plan', role_regexp: /[,&] (Plan:Editor)/) %>
 
 ### Create
 
