Update QE team pages with latest team members

--- a/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/enablement-saas-platforms-qe-team/index.html.md.erb
@@ -33,7 +33,7 @@ Quality Engineering Manager: Kassandra Svoboda
 | 4   	| [Systems]     | [Geo]                     | Nick Westbury                                                        	 |
 | 5   	| [Systems]     | [Gitaly]                  | John McDonnell                                                         |
 | 6    	| [Data Stores] | [Application Performance] | TBH                                                                    |
-| 7   	| [Data Stores] | [Global Search]           | Erick Banks                                                            |
+| 7   	| [Data Stores] | [Global Search]           | TBH                                                           |
 | 8  	| [Data Stores] | [Database]                | TBH                                                                    |
 | 9   	| [Data Stores] | [Pods]                    | TBH                                                                    |
 
