--- a/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/fulfillment-growth-qe-team/index.html.md.erb
@@ -27,11 +27,11 @@ Quality Engineering Manager: Vincy Wilson
 
 | S.No 	| Stage       	| Group              | SET Counterpart                       |
 |------	|---------------|--------------------|---------------------------------------|
-| 1    	| [Fulfillment] | [Purchase]         | Chloe Liu                             |
+| 1    	| [Fulfillment] | [Purchase]         | Valerie Burton                        |
 | 2    	| [Fulfillment] | [Provision]        | Dan Davison                           |
 | 3    	| [Fulfillment] | [Utilization]      | Edgars Brālītis                       | 
 | 4     | [Fulfillment] | [Fulfillment Platform] | TBH                               |
-| 5     | [Fulfillment] | [Billing and Subscription Management] | TBH                |
+| 5     | [Fulfillment] | [Billing and Subscription Management] | Chloe Liu          |
 | 6     | [Fulfillment] | [Commerce Integrations] | TBH                              |
 | 7     | [Fulfillment] | [Fulfillment Admin Tooling] | TBH                          |
 
