--- a/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/ops-analytics-qe-team/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: "Ops & Analytics Quality Engineering team"
-description: "Quality Engineering team for the Ops & Analytics Sections"
+title: "Ops Quality Engineering team"
+description: "Quality Engineering team for the Ops Sections"
 ---
 
 ## On this page
@@ -20,13 +20,13 @@ description: "Quality Engineering team for the Ops & Analytics Sections"
 
 ## Team members
 
-<%= direct_team(manager_role: 'Manager, Quality Engineering, Ops & Analytics') %>Engineers in this team are embedded in the [Ops section] and [Analytics section].
+<%= direct_team(manager_role: 'Manager, Quality Engineering, Ops & Analytics') %>Engineers in this team are embedded in the [Ops section].
 
 ## OKRs
 
 Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current OKRs and is updated regularly as the quarter progresses.
 
-Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122584658) of our current Ops and Analytics Quality Engineering OKR.
+Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122584658) of our current Ops Quality Engineering OKR.
 
 ## Quality Performance Indicators for the Ops Section
 
@@ -34,4 +34,3 @@ Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122
 <embed width="100%" height="550" src="<%= signed_periscope_url({ dashboard: 736012, embed: 'v2', filters: [{name: 'Development_Section' , value: 'ops' }]}) %>">
 
 [Ops section]: /handbook/product/categories/#ops-section
-[Analytics section]: /handbook/product/categories/#analytics-section
