--- a/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
@@ -27,20 +27,20 @@ Quality Engineering Manager: Vincy Wilson
 
 | S.No 	| Stage        | Group                       | SET Counterpart                                                        	|
 |------	|--------------|-----------------------------|------------------------------------------------------------------------	|
-| 1    	| [Secure]     | [Static Analysis]           | Careem Ahamed                                                         	|
+| 1    	| [Secure]     | [Static Analysis]           | TBH                                                         	|
 | 2    	| [Secure]     | [Dynamic Analysis]          | TBH                                                       	            |
 | 3    	| [Secure]     | [Composition Analysis]      | Will Meek                                                                |
 | 4    	| [Secure]     | [Vulnerability Research]    | TBH                                                                   	|
 | 5    	| [Govern]     | [Security Policies]         | TBH                                                                    	|
 | 6    	| [Govern]     | [Threat Insights]           | Harsha Muralidhar                                                        |
-| 7    	| [Govern]     | [Compliance]                | TBH                                                                      |
+| 7    	| [Govern]     | [Compliance]                | Mark Lapierre                                                                      |
 
 [Data Science section]
 
 | S.No 	| Stage         	| Group                       | SET Counterpart                                                   |
 |------	|-----------------|-----------------------------|---------------------------------------------------------------------|
 | 1    	| [Anti-Abuse]    | [Anti-Abuse]                | TBH                                                                    	|
-| 2    	| [ModelOps]      | [AI Assisted]  | Mark Lapierre                                                       |
+| 2    	| [ModelOps]      | [AI Assisted]  | TBH                                                       |
 | 3    	| [ModelOps]      | [MLOps]                     | TBH                                                                 |
 | 4    	| [ModelOps]      | [DataOps]                   | TBH                                                                 |
 
