Update Delivery vision in Handbook

--- a/infrastructure/team/delivery/index.html.md.erb
+++ b/infrastructure/team/delivery/index.html.md.erb
@@ -50,24 +50,21 @@ Each member of the Delivery group is part of this vision:
 
 ### Short-term
 
-* Automate release generation, removing most of the manual work
-* Automate deployment process, managing and limiting impact on production
-* Simplify security releases
-* Streamline the process of limiting feature impact in production environments
-* Enable feature testing at production-environment scale
-* Create detailed architecture blueprints and design for CD on GitLab.com
-* Develop and track KPIs to measure the team's impact on GitLab product delivery
+* Develop tooling and processes to allow the Maintenance Policy to be extended to fully support three versions
+* Improve deployment pipeline observability to allow deployment inefficiencies to be measured and reduced
+* Measure Release Manager workload to drive process improvements
 
 ### Mid-term
 
-* Drive the implementation of infrastructure changes to prepare GitLab.com for CD
-* Eliminate the need for feature-freeze blackouts during the development cycle
-* Shorten build times to allow for faster release times
+* Scale security releases
+* Automate tracking of deployment blocker information to improve data validity and reduce Release Manager toil
+* Improve deployment reliability to reduce MTTP and Release Manager workload
+* Extend release environments to improve testing for self-managed releases
 
 ### Long-term
 
-* Drive necessary changes that will lead to Kuberenetes-based infrastructure on GitLab.com
-* Fully automated releases for self-managed users
+* Support multiple deployment strategies to enable different types of change to be rolled out quickly, and safely with minimum impact to other deployemnt processes
+* Provide tooling to allow team members outside of Delivery, to safely self-serve deployment and release tasks
 
 ## Strategy
 
