Code Review BE - add projects

--- a/development/dev/create/code-review/backend/index.html.md.erb
+++ b/development/dev/create/code-review/backend/index.html.md.erb
@@ -16,6 +16,12 @@ The Create:Code Review BE team is responsible for all backend aspects of the pro
 [stage]: /handbook/product/categories/#create-stage
 [lifecycle]: /handbook/product/categories/#devops-stages
 
+We are currently focused on:
+
+- [Code Review Workflow](https://about.gitlab.com/stages-devops-lifecycle/code-review-workflow/), mainly the [Merge Requests](https://docs.gitlab.com/ee/user/project/merge_requests/) features
+- [GitLab CLI](https://gitlab.com/gitlab-org/cli)
+
+
 ## Group Members
 
 The following people are permanent members of the Create:Code Review Group:
