--- a/development/dev/create/code-review/backend/index.html.md.erb
+++ b/development/dev/create/code-review/backend/index.html.md.erb
@@ -34,16 +34,9 @@ The following members of other functional teams are our stable counterparts:
 
 ## Team OKRs
 
-Objectives and Key Results (OKRs) help align our team towards what really matters. These happen quarterly, align up through the stage, and are based on [company OKRs](/company/okrs/) and the [engineering OKR process](/handbook/engineering/#engineering-okr-process). We check in on the status of our progress routinely throughout the quarter - usually on a weekly basis, but at least on a monthly basis, to determine whether we are on track or need to pivot in order to accomplish or change these goals. At the end of the quarter, we do a [final scoring](/company/okrs/#scoring-okrs) which includes a [retrospective](/handbook/engineering/#okr-retrospection) on how the quarter went according to these OKRs. Individuals within the team, with the exception of Staff Engineers, are not required to have their own OKRs, but it is strongly encouraged in order to provide an overarching direction for the quarter and realize the impact we are making on the company as a whole. In some cases, it may also make sense to assign a key result directly to an individual in order to have a [DRI](/handbook/people-group/directly-responsible-individuals/).
+Objectives and Key Results (OKRs) help align our team towards what really matters. These happen quarterly, align up through the stage, and are based on [company OKRs](/company/okrs/) and the [engineering OKR process](/handbook/engineering/#engineering-okr-process). We check in on the status of our progress routinely throughout the quarter, at least on a monthly basis, to determine whether we are on track or need to pivot in order to accomplish or change these goals.
 
-Example template with questions to ask yourself:
-
-- **Objective:** How are you going to move X forward? _("Become a hero by improving efficiency")_
-  - **KR:** If you have met your objective, what will the outcome be? _("Mean Time to Resolve is reduced from 5 days to 2 days")_
-  - **KR:** How will I accomplish this objective? _("Automate monitoring alerts so we don't have to check dashboards")_
-  - **KR:** Why will this KR matter? _("Team efficiency improves by 5%")_
-
-[For a list of current and past OKRs for our team, use this link.](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Acode%20review&label_name[]=OKR&label_name[]=backend)
+[For a list of current and past OKRs for our team, use this link.](https://gitlab.com/gitlab-com/gitlab-OKRs/-/issues/?sort=title_asc&state=opened&label_name%5B%5D=group%3A%3Acode%20review&first_page_size=20)
 
 ## How We Work
 
