updated exciting things section

--- a/development/ops/verify/pipeline-authoring/index.html.md.erb
+++ b/development/ops/verify/pipeline-authoring/index.html.md.erb
@@ -37,9 +37,9 @@ description: "The GitLab team page for the Pipeline Authoring Group"
 ## Exciting things and accomplishments
 This section will list the top three most recent, exciting accomplishments from the team.
 
-* We [added](https://gitlab.com/gitlab-org/gitlab/-/issues/293645) in the `rules:change:compare:` which allows you to compare a branches and prevent those pipelines or jobs to run every time a new branch is pushed.
-* We welcomed to the team our newest Backend Engineer, [Leaminn Ma](https://gitlab.com/lma-git) and our new Senior Product Designer, [Sunjung Park](https://gitlab.com/sunjungp)!!
-* We [completed](https://gitlab.com/gitlab-org/gitlab/-/issues/37268) a highly upvoted issue for specifying variables when retrying a manual job.
+* Welcome our newest Backend Engineers, [Sam Kim](https://gitlab.com/samsam_kim) and [Kasia Misirli](https://gitlab.com/Kasia_Misirli), to the team!!
+* We [completed](https://gitlab.com/gitlab-org/gitlab/-/issues/29159) a highly upvoted issue for setting a predefined list of values for CI environment variables to show in the `Run pipeline` page form.
+* We [completed](https://gitlab.com/gitlab-org/gitlab/-/issues/196871) a highly upvoted issue for removing special character limitations in raw, masked variables.
 
 ## Team Members
 
